# fever_dream

./: .clang-format  .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  efx_gravity.cpp  efx_json_effect.cpp  efx_keyframe_animation.cpp  efx_think.cpp  particles_gravity.cpp  particles_keyframe_animations.cpp  particles_think.cpp  ui_bezier_editor.cpp  ui_imgui_sfml_test.cpp
examples/efx/: test_effect.json
src/: CMakeLists.txt  app.cpp
src/core/: concepts.hpp  floating_point.hpp  math.hpp  vec.hpp  vec_macro_gen.hpp
src/grx/: animation_keys.hpp  efx.hpp  efx_editor.hpp  json.hpp  keyframe_animation.hpp  math.hpp  particles.hpp  scene.hpp  sfml_types.hpp  texture_mgr.hpp  types.hpp
src/grx/ui/: bezier_editor.hpp  types.hpp
tools/: compodb
